# cloudmesh-ai-commander

./: .release_state.json  CHANGELOG.md  Makefile  README-gemma.md  README-mock.md  README.md  VERSION  mkdocs.yml  pyproject.toml  requirements.txt  test.sh
docs/: README-gemma.md  README-mock.md  api.md
src/cloudmesh/ai/command/: commander.py
src/cloudmesh/ai/commander/: __init__.py  commander.py  config.yaml  vllm_cmd.txt
src/cloudmesh_ai_commander.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_commander.py
